WIP - LESS fixed

--- a/src/mdd-input-error-framework.less
+++ b/src/mdd-input-error-framework.less
@@ -6,3 +6,15 @@
     color: blue;
   }
 }
+.browsehappy {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
+// injector
+@import (reference) './panel/alerts.less';
+@import (reference) './input/inputs.less';
+@import (reference) './modal/modals.less';
+// endinjector
