WIP - LESS injected

--- a/src/mdd-input-error-framework.less
+++ b/src/mdd-input-error-framework.less
@@ -13,8 +13,8 @@
   padding: 0.2em 0;
 }
 
-// injector
-@import (reference) './panel/alerts.less';
-@import (reference) './input/inputs.less';
-@import (reference) './modal/modals.less';
-// endinjector
+// inject:imports
+@import './panel/alerts.less';
+@import './input/inputs.less';
+@import './modal/modals.less';
+// endinject
