WIP - everything (visually) working!

--- a/src/input/inputs.less
+++ b/src/input/inputs.less
@@ -31,7 +31,7 @@
   &.currency-input {
     left: 50px;
     text-align: center;
-    background-image: url("/bower_components/po-ui-component/assets/pound.png");
+    background-image: url("../dist/assets/pound.png");
     background-repeat: no-repeat;
     background-size: 50px 50px;
   }
@@ -115,7 +115,7 @@
 .po-search-input-text {
   width: 100%;
   height: @text-field-height;
-  background-image: url("/bower_components/po-ui-component/assets/search.png");
+  background-image: url("../dist/assets/search.png");
   background-position: 98.5% 50%;
   background-repeat: no-repeat;
   background-size: 30px 30px;
@@ -155,7 +155,7 @@ po-input-transclude {
       }
       &.po-invalid {
         input.po-search-input-text {
-          background-image: url("/bower_components/po-ui-component/assets/search-invalid.png");
+          background-image: url("../dist/assets/search-invalid.png");
         }
       }
     }
