--- a/src/panel/templates/error-alert.html
+++ b/src/panel/templates/error-alert.html
@@ -1,6 +1,6 @@
 <div class='po-alert error' ng-show="error">
     <div class="alert-icon">
-        <img src="/bower_components/po-ui-component/assets/error.png" class="img-responsive">
+        <img src="../dist/assets/error.png" class="img-responsive">
     </div>
     <div class="alert-text">
         <p>{{error}}</p>
