--- a/src/panel/templates/info-alert.html
+++ b/src/panel/templates/info-alert.html
@@ -1,6 +1,6 @@
 <div class='po-alert info' ng-show="info">
     <div class="alert-icon">
-        <img src="/bower_components/po-ui-component/assets/info.png" class="img-responsive">
+        <img src="../dist/assets/info.png" class="img-responsive">
     </div>
     <div class="alert-text">
         <p>{{info}}</p>
